<resources>
    <string name="app_name">GitHubUser</string>
    <string name="change_language">Change Language</string>
    <string name="search_hint">Search for username here</string>
    <string name="title_activity_detail_user">MainActivity</string>
    <string name="title_follower">Follower</string>
    <string name="title_following">Following</string>
    <string name="title_notifications">Notifications</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="tab_follower">Follower</string>
    <string name="tab_following">Following</string>
    <string name="public_repositories">Public Repositories</string>
    <string name="userLocation">Location is not provided</string>
    <string name="userCompany">Not in any company</string>
    <string name="favorite">Favorite</string>
    <string name="favNoUser">You still dont have a favorite user</string>
    <string name="menuSetting">Settings</string>
    <string name="alarmPreference">Activate Alarm</string>
    <string name="alarmMessage">Tap here to open this application</string>
    <string name="alarmStateOn">Your Alarm is SET,  turn it OFF if not needed</string>
    <string name="alarmStateOff">Your Alarm is OFF, turn it ON if needed</string>

    <string name="your_lang">English</string>
    <string name="key_lang">english</string>
    <string name="key_langpref">lang</string>
    <string-array name="key_languageLabel">
        <item>English</item>
        <item>Indonesia</item>
    </string-array>
    <string-array name="key_languageValue">
        <item>english</item>
        <item>indonesia</item>
    </string-array>
    <string name="key_alarm">alarm</string>
    <string name="appwidget_text">Favorite User Image</string>
    <string name="empty_text">NO DATA</string>
</resources>