<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24px"
        android:title="Search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_favorite_white_48dp"
        android:title="@string/favorite"
        app:showAsAction="always" />
    <group >
        <item
            android:id="@+id/option_lang"
            android:icon="@drawable/ic_language_white_24dp"
            android:title="@string/change_language" />
        <item
            android:id="@+id/setting"
            android:title="@string/menuSetting" />
    </group>
</menu>